gcc/testsuite/rust/compile/bad_type1.rs
fn main() {
    let logical: bool = 123; // { dg-error "expected .bool. got .<integer>." }
}
